[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = "tutorial for machine learning service"
authors = ["Aiden-Jeon <aiden.jongseob@gmail.com>"]
packages = [
    { include = "ml_service", from="src"},
]

[tool.poetry.dependencies]
python = ">=3.9 <3.10"
mlflow = "1.26.1"
scikit-learn = "1.1.1"
pandas = "1.4.3"
fastapi = "0.78.0"
uvicorn = {extras = ["standard"], version = "0.18.2"}
pydantic = "1.9.1"
typer = "0.4.1"
SQLAlchemy = "1.4.39"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
mypy = "0.961"
isort = "5.10.1"
pylint = "^2.14.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ml-service = 'src.ml_service.cli.main:app'
